<fix> правки ревью + починка тестов